# pyright-pylance-vscode-hook

./: .pre-commit-hooks.yaml  pyproject.toml
scripts/: extract-defaults.py
src/pyright_pylance_vscode/: defaults.json  hook.py
